<resources>
    <string name="app_name">AnclApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="cancel">Cancel</string>
    <string name="km_unit">km</string>
    <string name="filter">Filter</string>
    <string name="account">Account</string>
    <string name="bin">Bin</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="activate_filter">Activate filter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="key_pref_google_drive_sync">pref_google_drive_sync</string>
    <string name="pref_google_drive_sync">Google Drive sync</string>
    <string name="key_pref_location_reminder_distance">pref_location_reminder_distance</string>
    <string name="pref_location_reminder_distance">Reminder distance</string>
    <string name="pref_location_reminder_distance_default_value">100</string>
    <string-array name="pref_location_reminder_distance_titles">
        <item>50 meters</item>
        <item>100 meters</item>
        <item>250 meters</item>
        <item>500 meters</item>
        <item>750 meters</item>
        <item>1000 meters</item>
        <item>2500 meters</item>
        <item>5000 meters</item>
    </string-array>
    <string-array name="pref_location_reminder_distance_values">
        <item>50</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>750</item>
        <item>1000</item>
        <item>2500</item>
        <item>5000</item>
    </string-array>
    <string name="key_pref_location_reminder">pref_location_reminder</string>
    <string name="pref_location_reminder">Set default reminder by location</string>
    <string name="key_pref_purge_anchors">pref_purge_anchors</string>
    <string name="pref_purge_anchors">Remove anchors from bin</string>
    <string name="pref_purge_anchors_default_value">14</string>
    <string-array name="pref_purge_anchors_titles">
        <item>3 days</item>
        <item>7 days</item>
        <item>14 days</item>
        <item>30 days</item>
        <item>90 days</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_purge_anchors_values">
        <item>3</item>
        <item>7</item>
        <item>14</item>
        <item>30</item>
        <item>90</item>
        <item>-1</item>
    </string-array>
    <string name="key_pref_anchors_color">pref_anchors_color</string>
    <string name="pref_anchors_color">Default anchor color</string>
    <string name="pref_anchors_color_default_value">#d50000</string>
    <string name="color_preview">Color preview</string>
    <string name="notification_icon">Notification icon</string>
    <string name="tag_icon">Tag icon</string>
    <string name="description_icon">Description icon</string>
    <string-array name="pref_anchors_color_titles">
        <item>Tomato</item>
        <item>Tangerine</item>
        <item>Banana</item>
        <item>Basil</item>
        <item>Sage</item>
        <item>Peacock</item>
        <item>Blueberry</item>
        <item>Lavender</item>
        <item>Grape</item>
        <item>Flamingo</item>
        <item>Graphite</item>
    </string-array>
    <string-array name="pref_anchors_color_values">
        <item>#d50000</item>
        <item>#f4511e</item>
        <item>#f6bf26</item>
        <item>#0b8043</item>
        <item>#33b679</item>
        <item>#039be5</item>
        <item>#3f51b5</item>
        <item>#7986cb</item>
        <item>#8e24aa</item>
        <item>#e67c73</item>
        <item>#616161</item>
    </string-array>
    <string name="title_activity_new_anchor">New Anchor</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hint_anchor_title">Anchor title</string>
    <string name="hint_anchor_description">Description</string>
    <string name="hint_anchor_tag">Tag</string>
    <string name="reminder">Reminder</string>
    <string name="color">Color</string>
    <string name="save">Save</string>
    <string name="default_color">Default color</string>
    <string name="no_location_found">No location found</string>
    <string name="new_anchor">New anchor</string>
    <string name="anchor_icon">Anchor icon</string>
    <string name="title">Title</string>
    <string name="distance">Distance</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="title_activity_see_anchor">See anchor</string>
    <string name="reminder_location_enabled">Reminder by location enabled</string>
    <string name="reminder_location_disabled">Reminder by location disabled</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="menu_button">Menu button</string>
    <string name="title_activity_edit_anchor">Edit anchor</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search…</string>
    <string name="cant_load_geocoder">Cant\' load geocoder</string>
    <string name="go_to_this_place">Go to this place</string>
    <string name="ok">Ok</string>
    <string name="no_location_provider_found">No location provider found</string>
    <string name="no_location_provider_message">It seems GPS is disconnected. Several options may not be available. Please consider activate the GPS.</string>
    <string name="anchors_bin">Anchors bin</string>
    <string name="remove_anchor_msg">Do you want to remove this anchor?</string>
    <string name="action_restore">Restore</string>
    <string name="anchor_deleted">Anchor deleted</string>
    <string name="anchor_restored">Anchor restored</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="msg_near_anchor">You are near \"%s\"</string>
    <string name="msg_click_more_options">Click here for more options</string>
    <string name="action_share">Share</string>
</resources>