<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_pref_location_reminder"
        android:title="@string/pref_location_reminder" />

    <ListPreference
        android:defaultValue="@string/pref_location_reminder_distance_default_value"
        android:entries="@array/pref_location_reminder_distance_titles"
        android:entryValues="@array/pref_location_reminder_distance_values"
        android:key="@string/key_pref_location_reminder_distance"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_location_reminder_distance" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_pref_google_drive_sync"
        android:title="@string/pref_google_drive_sync" />

    <ListPreference
        android:defaultValue="@string/pref_purge_anchors_default_value"
        android:entries="@array/pref_purge_anchors_titles"
        android:entryValues="@array/pref_purge_anchors_values"
        android:key="@string/key_pref_purge_anchors"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_purge_anchors" />

</PreferenceScreen>