<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/filter" />

    <item
        android:id="@+id/menu_filter_switch"
        app:actionLayout="@layout/switch_layout"
        android:title="@string/activate_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/account" />

    <item
        android:id="@+id/menu_bin"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/bin" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about" />
    
</menu>
