<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.agustruiz.anclapp.ui.anchor.seeAnchor">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"

        android:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="200"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove"
        android:orderInCategory="300"
        android:title="@string/action_remove"
        app:showAsAction="never" />
</menu>
