<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.anchor.NewAnchorActivity"
    tools:showIn="@layout/activity_form_anchor">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/form_anchor_line_height">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/form_anchor_icon_margin"
                android:contentDescription="@string/description_icon"
                android:src="@drawable/ic_short_text_black_24dp"
                android:tint="@color/grey700" />

            <EditText
                android:id="@+id/new_anchor_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/hint_anchor_description"
                android:textSize="@dimen/form_anchor_text_size" />

        </android.support.v7.widget.LinearLayoutCompat>

        <include layout="@layout/vertical_separator" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/form_anchor_line_height">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/form_anchor_icon_margin"
                android:contentDescription="@string/description_icon"
                android:src="@drawable/ic_gps_fixed_24dp"
                android:tint="@color/grey700" />

            <TextView
                android:id="@+id/new_anchor_lat_lng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="@dimen/form_anchor_text_size" />

        </android.support.v7.widget.LinearLayoutCompat>

        <include layout="@layout/vertical_separator" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/form_anchor_line_height">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/form_anchor_icon_margin"
                android:contentDescription="@string/tag_icon"
                android:src="@drawable/ic_tag_black_24dp"
                android:tint="@color/grey700" />

            <EditText
                android:id="@+id/new_anchor_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/hint_anchor_tag"
                android:textSize="@dimen/form_anchor_text_size" />

        </android.support.v7.widget.LinearLayoutCompat>

        <include layout="@layout/vertical_separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/form_anchor_line_height">

            <ImageView
                android:id="@+id/new_anchor_reminder_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:layout_margin="@dimen/form_anchor_icon_margin"
                android:contentDescription="@string/notification_icon"
                android:src="@drawable/ic_notifications_black_24dp"
                android:tint="@color/grey700" />

            <TextView
                android:id="@+id/new_anchor_reminder_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@+id/new_anchor_reminder_icon"
                android:gravity="center_vertical"
                android:text="@string/reminder"
                android:textColor="@android:color/black"
                android:textSize="@dimen/form_anchor_text_size"
                tools:ignore="RelativeOverlap" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/new_anchor_reminder_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/form_anchor_icon_margin"
                android:gravity="center_vertical" />

        </RelativeLayout>

        <include layout="@layout/vertical_separator" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/new_anchor_color_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/form_anchor_line_height"
            android:padding="0dp">

            <ImageView
                android:id="@+id/new_anchor_color_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/form_anchor_icon_margin"
                android:contentDescription="@string/color_preview"
                android:src="@drawable/ic_color_item_solid_24dp"
                android:tint="@color/grey700" />

            <TextView
                android:id="@+id/new_anchor_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:text="@string/color"
                android:textColor="@android:color/black"
                android:textSize="@dimen/form_anchor_text_size" />

        </android.support.v7.widget.LinearLayoutCompat>

        <include layout="@layout/vertical_separator" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
